--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "howManyImputations"]
+	path = howManyImputations
+	url = https://github.com/josherrickson/howmanyimputations
+	shallow = true
+	registered = true
+[submodule "rlemon"]
+	path = rlemon
+	url = https://github.com/josherrickson/rlemon
+	shallow = true
+	registered = true
